@@ -1403,6 +1403,39 @@ sub log_job($$){
 }
 
 
+# archive_some_moldable_job_nodes
+# sets the index fields to LOG in the table assigned_resources
+# parameters : base, mjobid, hostnames
+# return value : /
+sub archive_some_moldable_job_nodes($$$){
+    my $dbh = shift;
+    my $mjob_id = shift;
+    my $hosts = shift;
+    
+    if ($Db_type eq "Pg"){
+        $dbh->do("  UPDATE assigned_resources
+                    SET
+                        assigned_resource_index = \'LOG\'
+                    FROM resources
+                    WHERE
+                        assigned_resources.assigned_resource_index = \'CURRENT\'
+                        AND assigned_resources.moldable_job_id = $mjob_id
+                        AND resources.resource_id = assigned_resources.resource_id
+                        AND resources.network_address IN (".join(",","\'@{$hosts}\'").") 
+             ");
+    }else{
+        $dbh->do("  UPDATE assigned_resources, resources
+                    SET 
+                        assigned_resources.assigned_resource_index = \'LOG\'
+                    WHERE
+                        assigned_resources.assigned_resource_index = \'CURRENT\'
+                        AND assigned_resources.moldable_job_id = $mjob_id
+                        AND resources.resource_id = assigned_resources.resource_id
+                        AND resources.network_address IN (".join(",","\'@{$hosts}\'").")
+                ");
+    }
+}
+
 
 # Resubmit a job and give the new job_id
 # args : database, job id
